@@ -48,7 +48,7 @@
 /****************************************************************************/
 
 /* Directories being scanned whose locks need to be freed when shutting down. */
-struct MinList NOCOMMON __directory_list;
+struct MinList __directory_list;
 
 /****************************************************************************/
 
